--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/* Menu Navigation */
 ul {
 	display: flex;
 	justify-content: space-around;
@@ -22,4 +23,12 @@ li a {
 
 li a:hover {
 	background-color: #111111;
+}
+
+/* Page Header/Welcome Message welcome.html */
+#SectionHat {
+	position: relative;
+	bottom: -12px;
+	border-bottom: 2px solid black;
+	overflow: hidden;
 }
