--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ ul {
 	display: flex;
 	justify-content: space-around;
 	list-style-type: none;
-	margin: 50px
+	margin: 50px;
 	padding: 0;
 	overflow: hidden;
 	background-color: #333333;
