--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ ul {
 	display: flex;
 	justify-content: space-around;
 	list-style-type: none;
-	margin: 50px;
+	margin: 50px 50px 0 50px;
 	padding: 0;
 	overflow: hidden;
 	background-color: #333333;
@@ -31,4 +31,11 @@ li a:hover {
 	bottom: -12px;
 	border-bottom: 2px solid black;
 	overflow: hidden;
+}
+
+#column-entab {
+	display: inline;
+	max-width: 100%;
+	max-height: 100%;
+	margin: 0 50px 50px 50px;
 }
